add_library(design_patterns design_patterns.cpp)

add_subdirectory(builder)
target_link_libraries(design_patterns PUBLIC design_patterns_builder)
target_include_directories(design_patterns PUBLIC builder/)

add_subdirectory(factory)
target_link_libraries(design_patterns PUBLIC design_patterns_factory)
target_include_directories(design_patterns PUBLIC factory/)

add_subdirectory(prototype)
target_link_libraries(design_patterns PUBLIC design_patterns_prototype)
target_include_directories(design_patterns PUBLIC prototype/)

add_subdirectory(adaptor)
target_link_libraries(design_patterns PUBLIC design_patterns_adaptor)
target_include_directories(design_patterns PUBLIC adaptor/)

add_subdirectory(composite)
target_link_libraries(design_patterns PUBLIC design_patterns_composite)
target_include_directories(design_patterns PUBLIC composite/)

add_subdirectory(decorator)
target_link_libraries(design_patterns PUBLIC design_patterns_decorator)
target_include_directories(design_patterns PUBLIC decorator/)

add_subdirectory(strategy)
target_link_libraries(design_patterns PUBLIC design_patterns_strategy)
target_include_directories(design_patterns PUBLIC strategy/)
